--- a/tourcompany/site/views/pages/authorization.ejs
+++ b/tourcompany/site/views/pages/authorization.ejs
@@ -18,7 +18,7 @@
             </div>
             <form class="authorization__form">
                 <input class="authorization__input" type="text" name="login" placeholder="Логин">
-                <input class="authorization__input" type="text" name="password" placeholder="Логин">
+                <input class="authorization__input" type="text" name="password" placeholder="Пароль">
                 <button class="authorization__button" type="button">ВОЙТИ</button>
             </form>
             <button class="authorization__button" style="display: none;" id="exit" type="button">ВЫЙТИ</button>
